--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 6006 -s public",
-    "build-storybook": "build-storybook -s public"
+    "build-storybook": "build-storybook -s public",
+    "chromatic": "npx chromatic --project-token i20pvssux5m"
   },
   "eslintConfig": {
     "extends": [
@@ -50,6 +51,7 @@
     "@storybook/preset-create-react-app": "^3.1.5",
     "@storybook/react": "^6.1.11",
     "babel-loader": "^8.2.2",
+    "chromatic": "^5.4.0",
     "react-test-renderer": "^17.0.1"
   }
 }
